# ufps

./: .gitignore  CMakeLists.txt  Makefile  README.md  scene.yaml
assets/shaders/: average_luminance.comp  bloom_downsample.frag  bloom_mix.frag  bloom_upsample.frag  bloom_upsample.vert  chromatic_abberation.frag  debug_light.frag  debug_light.vert  gbuffer.frag  gbuffer.vert  light_pass.frag  line.frag  line.vert  luminance_histogram.comp  simple.frag  simple.vert  ssao.frag  ssao_blur.frag  tone_map.frag  transparancy.frag
include/: config.h.in  log.h  window.h
include/concurrency/: awaitable_manager.h  concurrent_queue.h  cond_var.h  lock.h  task.h  thread.h  thread_pool.h
include/core/: camera.h  entity.h  manifest_descriptions.h  render_entity.h  scene.h  sparse_set.h  sub_mesh.h  utils.h
include/events/: event.h  key.h  key_event.h  mouse_button_event.h  mouse_event.h  stop_event.h
include/graphics/: buffer.h  buffer_writer.h  color.h  command_buffer.h  dds.h  debug_renderer.h  debug_ui.h  entity.h  frame_buffer.h  line_data.h  material_manager.h  mesh_data.h  mesh_manager.h  mesh_view.h  model_data.h  multi_buffer.h  object_data.h  opengl.h  persistent_buffer.h  point_light.h  program.h  renderer.h  sampler.h  scene.h  shader.h  texture.h  texture_data.h  texture_manager.h  utils.h  vertex_data.h
include/math/: aabb.h  matrix3.h  matrix4.h  quaternion.h  ray.h  transform.h  utils.h  vector3.h  vector4.h
include/resources/: embedded_resource_loader.h  file.h  file_resource_loader.h  resource_loader.h
include/serialization/: yaml_serializer.h
include/utils/: auto_release.h  compress.h  data_buffer.h  decompress.h  ensure.h  exception.h  formatter.h  string_unordered_map.h
src/: CMakeLists.txt  main.cpp
src/concurrency/: CMakeLists.txt  cond_var.cpp  thread_pool.cpp
src/core/: CMakeLists.txt  camera.cpp  entity.cpp  render_entity.cpp  scene.cpp  sub_mesh.cpp
src/events/: CMakeLists.txt  key_event.cpp  mouse_button_event.cpp  mouse_event.cpp
src/graphics/: CMakeLists.txt  buffer.cpp  command_buffer.cpp  debug_renderer.cpp  debug_ui.cpp  frame_buffer.cpp  mesh_manager.cpp  persistent_buffer.cpp  program.cpp  renderer.cpp  sampler.cpp  shader.cpp  texture.cpp  texture_manager.cpp  utils.cpp
src/math/: CMakeLists.txt  vector3.cpp
src/posix/: debug_renderer.cpp  debug_ui.cpp  file.cpp  file_resource_loader.cpp  window.cpp
src/resources/: CMakeLists.txt  embedded_resource_loader.cpp
src/serialization/: CMakeLists.txt
src/utils/: CMakeLists.txt  compress.cpp  decompress.cpp  exception.cpp
src/win32/: debug_renderer.cpp  debug_ui.cpp  file_resource_loader.cpp  window.cpp
tests/: CMakeLists.txt  auto_release_tests.cpp  awaitable_manager_tests.cpp  concurrent_queue_tests.cpp  ensure_tests.cpp  formatter_tests.cpp  matrix3_tests.cpp  matrix4_tests.cpp  multi_buffer_tests.cpp  quaternion_tests.cpp  sparse_set_tests.cpp  task_tests.cpp  thread_pool_tests.cpp  thread_tests.cpp  vector3_tests.cpp  yaml_serializer_tests.cpp
tools/: CMakeLists.txt  resource_packer.cpp
